--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="stat"><div style="font-weight:700">8+</div><div class="muted">Years exp</div></div>
             <div class="stat"><div style="font-weight:700">10+</div><div class="muted">Projects</div></div>
           </div>
-          <div style="margin-top:12px;font-size:13px;color:var(--muted)">Want a tailored résumé or case study? <a href="mailto:peterisongo18@gmail.com" style="color:var(--accent-2)">Email me</a></div>
+          <div style="margin-top:12px;font-size:13px;color:var(--muted)">Want a custom software, mobile app or website? <a href="mailto:peterisongo18@gmail.com" style="color:var(--accent-2)">Email me</a></div>
         </div>
       </aside>
     </main>
