--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </div>
         </div>
 
-        <div class="card" style="margin-top:14px">
+        <div class="card" style="margin-top:14px"><center>
           <h2 style="margin:0 0 8px 0">About my approach</h2>
           <p class="muted">Product-driven: I translate product needs into measurable technical plans. I prioritize observability, strong test coverage, and incremental delivery so teams can move quickly and safely.</p>
 
