--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Petresonko1 — Software Engineer</title>
+  <title>Petresonko1 - Software Engineer</title>
   <meta name="description" content="Petresonko1 — Software engineer focused on scalable systems, APIs and delightful developer experiences.">
   <style>
     :root{
@@ -76,7 +76,7 @@
           </div>
         </div>
 
-        <div class="card" style="margin-top:14px"><center>
+        <div class="card" style="margin-top:14px">
           <h2 style="margin:0 0 8px 0">About my approach</h2>
           <p class="muted">Product-driven: I translate product needs into measurable technical plans. I prioritize observability, strong test coverage, and incremental delivery so teams can move quickly and safely.</p>
 
