--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <img class="avatar" src="https://avatars.githubusercontent.com/Petresonko1" alt="avatar">
       <div style="flex:1">
         <h1>Petre Isongo <small>@Petresonko1 — Software Engineer</small></h1>
-        <p class="lead">I design and build reliable, maintainable systems and developer tooling — backend-first, with a pragmatic full-stack lens. I focus on observability, robust APIs, and shipping features that matter.</p>
+        <p class="lead">I build web and software solutions that span modern websites, mobile applications, and full stack systems with a strong focus on reliability, maintainability, and real world usability. My work blends thoughtful user experience with well structured application logic, ensuring that products are intuitive to use and robust behind the scenes. I enjoy working across the stack, from designing clean interfaces to integrating scalable services and APIs, while paying close attention to performance, observability, and long term sustainability. I value clean code, practical problem solving, and shipping features that create meaningful impact for both users and development teams.</p>
 
         <div class="cta-row">
           <a class="btn" href="https://github.com/Petresonko1" target="_blank" rel="noopener">View my GitHub</a>
@@ -76,7 +76,7 @@
           </div>
         </div>
 
-        <div class="card" style="margin-top:14px">
+        <div class="card" style="margin-top:14px"><center>
           <h2 style="margin:0 0 8px 0">About my approach</h2>
           <p class="muted">Product-driven: I translate product needs into measurable technical plans. I prioritize observability, strong test coverage, and incremental delivery so teams can move quickly and safely.</p>
 
@@ -134,8 +134,7 @@
           <div style="margin-top:12px;font-size:13px;color:var(--muted)">Want a custom software, mobile app or website? <a href="mailto:peterisongo18@gmail.com" style="color:var(--accent-2)">Email me</a></div>
         </div>
       </aside>
-    </main>
-
+    </main></center>
     <footer>
       <div style="margin-top:18px">Made with care • © <span id="year"></span> Petre Isongo • <a href="https://github.com/Petresonko1" style="color:var(--muted)">github.com/Petresonko1</a></div>
     </footer>
