--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     }
     .wrap{max-width:var(--maxw); margin:0 auto; padding:28px; border-radius:14px; background:linear-gradient(180deg, rgba(255,255,255,0.018), rgba(255,255,255,0.01)); box-shadow:0 10px 30px rgba(2,6,23,0.6); width: 100%; text-align: center;} /* Improved centering and full width */
     header{display:flex; gap:22px; align-items:flex-start; justify-content: center; flex-direction: row; text-align: left;} /* Reorganized to row layout, avatar beside text, adjusted alignment */
-    .avatar{width:120px;height:120px;border-radius:16px;object-fit:cover;object-position:center;border:2px solid rgba(255,255,255,0.04); background:linear-gradient(135deg,var(--accent),var(--accent-2)); padding:3px} /* Increased size and ensured centering to avoid top cropping */
+    .avatar{width:120px;height:120px;border-radius:16px;object-fit:contain;object-position:center;border:2px solid rgba(255,255,255,0.04); background:linear-gradient(135deg,var(--accent),var(--accent-2)); padding:3px} /* Changed to contain to show full image without cropping */
     h1{margin:0;font-size:28px;letter-spacing:-0.2px;}
     h1 small{display:block;color:var(--muted);font-weight:600;font-size:14px}
     .lead{color:var(--muted);margin-top:8px;max-width:66ch;} /* Removed auto margins for left alignment */
