--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </head>
 <body>
   <div class="wrap">
-    <header>
+    <header><br><br>
       <img class="avatar" src="https://avatars.githubusercontent.com/Petresonko1" alt="avatar">
       <div style="flex:1">
         <h1>Petre Isongo <small>@Petresonko1 — Software Engineer</small></h1>
