--- a/index.html
+++ b/index.html
@@ -6,56 +6,178 @@
   <title>Petresonko1 - Software Engineer</title>
   <meta name="description" content="Petresonko1 — Software engineer focused on scalable systems, APIs and delightful developer experiences.">
   <style>
-    :root{
-      --bg:#0b1020; --card:#0f1726; --muted:#9aa6bd; --accent:#6ee7b7; --accent-2:#60a5fa;
-      --glass: rgba(255,255,255,0.03); --glass-2: rgba(255,255,255,0.02);
+    :root {
+      --bg:#0b1020;
+      --card:#0f1726;
+      --muted:#9aa6bd;
+      --accent:#6ee7b7;
+      --accent-2:#60a5fa;
+      --glass: rgba(255,255,255,0.03);
+      --glass-2: rgba(255,255,255,0.02);
       --maxw:1100px;
       font-synthesis:none;
     }
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0; color:#e6eef8; font-family:Inter,ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial;
+    * { box-sizing: border-box; }
+    html, body { height: 100%; margin: 0; }
+    body {
+      color:#e6eef8;
+      font-family:Inter,ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial;
       background: radial-gradient(800px 400px at 10% 10%, rgba(96,165,250,0.06), transparent 6%),
                   linear-gradient(180deg,#021027 0%, #071428 60%), var(--bg);
-      -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
       line-height:1.5;
-      display: flex; justify-content: center; align-items: center; /* Center the entire page vertically and horizontally */
+      display: flex;
+      justify-content: center;
+      align-items: center;
       min-height: 100vh;
     }
-    .wrap{max-width:var(--maxw); margin:0 auto; padding:28px; border-radius:14px; background:linear-gradient(180deg, rgba(255,255,255,0.018), rgba(255,255,255,0.01)); box-shadow:0 10px 30px rgba(2,6,23,0.6); width: 100%; text-align: center;} /* Improved centering and full width */
-    header{display:flex; gap:22px; align-items:flex-start; justify-content: center; flex-direction: row; text-align: left;} /* Reorganized to row layout, avatar beside text, adjusted alignment */
-    .avatar{width:100px;height:100px;border-radius:16px;object-fit:contain;object-position:center;border:2px solid rgba(255,255,255,0.04); background:linear-gradient(135deg,var(--accent),var(--accent-2)); padding:3px} /* Reduced size to 100x100 for a smaller, fitting avatar */
-    h1{margin:0;font-size:32px;letter-spacing:-0.2px;} /* Increased font size for bigger name display */
-    h1 small{display:block;color:var(--muted);font-weight:600;font-size:14px}
-    .lead{color:var(--muted);margin-top:8px;max-width:66ch;} /* Removed auto margins for left alignment */
-    .cta-row{margin-top:14px;display:flex;gap:10px;flex-wrap:wrap;} /* Removed center justify for left alignment */
-    .btn{background:linear-gradient(90deg,var(--accent),var(--accent-2)); color:#042433;padding:10px 14px;border-radius:10px;text-decoration:none;font-weight:700;font-size:14px;box-shadow:0 6px 18px rgba(35,80,140,0.08)}
-    .btn-ghost{background:transparent;border:1px solid rgba(255,255,255,0.06);color:var(--accent-2);padding:10px 12px;border-radius:10px;text-decoration:none;font-weight:600}
-    main.grid{display:grid;grid-template-columns:1fr 360px;gap:22px;margin-top:20px; justify-items: center;} /* Center grid items */
-    .card{background:var(--card);padding:18px;border-radius:12px;border:1px solid rgba(255,255,255,0.02); text-align: center;} /* Center card content */
-    .projects{display:grid;grid-template-columns:repeat(2,1fr);gap:12px; justify-items: center;}
-    .proj{background:linear-gradient(180deg,rgba(0,0,0,0.02),transparent);border-radius:10px;padding:12px;border:1px solid rgba(255,255,255,0.02); text-align: center;}
-    .proj h3{margin:0;font-size:15px}
-    .proj p{margin:8px 0 0 0;color:var(--muted);font-size:13px}
-    .skills{display:flex;flex-wrap:wrap;gap:8px;margin-top:10px; justify-content: center;} /* Center skills */
-    .skill{padding:6px 10px;border-radius:999px;background:linear-gradient(90deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));font-size:13px;color:var(--muted)}
-    aside .meta-row{display:flex;gap:10px;align-items:center;flex-wrap:wrap; justify-content: center;}
-    .stat{background:var(--glass);padding:10px;border-radius:10px;min-width:100px;text-align:center}
-    .muted{color:var(--muted);font-size:13px}
-    footer{margin-top:20px;color:var(--muted);font-size:13px;text-align:center}
-    @media(max-width:920px){
-      main.grid{grid-template-columns:1fr; padding-top:10px}
-      .projects{grid-template-columns:1fr}
-      .avatar{width:80px;height:80px} /* Adjusted mobile size to 80x80 for better fit */
-      header{flex-direction: column; align-items: center; text-align: center;} /* Stack on mobile and center */
-      .lead{text-align: center; margin-left: auto; margin-right: auto;}
-      .cta-row{justify-content: center;}
+    .wrap {
+      max-width: var(--maxw);
+      width: 100%;
+      margin: 0 auto;
+      padding: 28px;
+      border-radius: 14px;
+      background: linear-gradient(180deg, rgba(255,255,255,0.018), rgba(255,255,255,0.01));
+      box-shadow: 0 10px 30px rgba(2,6,23,0.6);
+      text-align: center;
     }
-    /* small interactive touches */
-    a:hover{opacity:0.95}
-    .copy{cursor:pointer;border:1px dashed rgba(255,255,255,0.03);padding:8px;border-radius:8px}
-    .badge-ghost{font-size:12px;background:rgba(255,255,255,0.02);padding:6px 8px;border-radius:8px}
+    header {
+      display: flex;
+      gap: 28px;
+      align-items: center;
+      justify-content: center;
+      flex-direction: row;
+      text-align: left;
+      padding-top: 24px;
+    }
+    .avatar {
+      width: 120px;
+      height: 120px;
+      border-radius: 16px;
+      object-fit: cover;
+      object-position: center;
+      border: 2px solid rgba(255,255,255,0.04);
+      background: linear-gradient(135deg, var(--accent), var(--accent-2));
+      padding: 3px;
+    }
+    h1 {
+      margin: 0 0 12px 0;
+      font-size: 42px;
+      letter-spacing: -0.5px;
+      line-height: 1.2;
+    }
+    h1 small {
+      display: block;
+      color: var(--muted);
+      font-weight: 600;
+      font-size: 16px;
+      margin-top: 4px;
+    }
+    .lead {
+      color: var(--muted);
+      margin-top: 8px;
+      max-width: 66ch;
+    }
+    .cta-row {
+      margin-top: 14px;
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+    }
+    .btn {
+      background: linear-gradient(90deg,var(--accent),var(--accent-2));
+      color:#042433;
+      padding:10px 14px;
+      border-radius:10px;
+      text-decoration:none;
+      font-weight:700;
+      font-size:14px;
+      box-shadow:0 6px 18px rgba(35,80,140,0.08);
+    }
+    .btn-ghost {
+      background: transparent;
+      border: 1px solid rgba(255,255,255,0.06);
+      color: var(--accent-2);
+      padding: 10px 12px;
+      border-radius:10px;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    main.grid {
+      display: grid;
+      grid-template-columns: 1fr 360px;
+      gap: 22px;
+      margin-top: 20px;
+      justify-items: center;
+      align-items: start;
+    }
+    .card {
+      background: var(--card);
+      padding: 18px;
+      border-radius: 12px;
+      border: 1px solid rgba(255,255,255,0.02);
+      text-align: center;
+    }
+    .projects {
+      display: grid;
+      grid-template-columns: repeat(2,1fr);
+      gap: 12px;
+      justify-items: center;
+    }
+    .proj {
+      background: linear-gradient(180deg,rgba(0,0,0,0.02),transparent);
+      border-radius:10px;
+      padding:12px;
+      border:1px solid rgba(255,255,255,0.02);
+      text-align:center;
+    }
+    .proj h3 { margin:0; font-size:15px; }
+    .proj p { margin:8px 0 0 0; color: var(--muted); font-size:13px; }
+    .skills {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      margin-top: 10px;
+      justify-content: center;
+    }
+    .skill {
+      padding: 6px 10px;
+      border-radius: 999px;
+      background: linear-gradient(90deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
+      font-size: 13px;
+      color: var(--muted);
+    }
+    aside .meta-row {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    .stat {
+      background: var(--glass);
+      padding: 10px;
+      border-radius:10px;
+      min-width: 100px;
+      text-align: center;
+    }
+    .muted { color: var(--muted); font-size:13px; }
+    footer { margin-top:20px; color: var(--muted); font-size:13px; text-align:center; }
+
+    @media(max-width:920px){
+      main.grid { grid-template-columns:1fr; padding-top:10px; }
+      .projects { grid-template-columns:1fr; }
+      .avatar { width: 100px; height: 100px; }
+      header { flex-direction: column; align-items: center; text-align: center; padding-top: 20px; }
+      .lead { text-align: center; margin-left: auto; margin-right: auto; }
+      .cta-row { justify-content: center; }
+    }
+
+    a:hover { opacity:0.95; }
+    .copy { cursor:pointer; border:1px dashed rgba(255,255,255,0.03); padding:8px; border-radius:8px; }
+    .badge-ghost { font-size:12px; background: rgba(255,255,255,0.02); padding:6px 8px; border-radius:8px; }
   </style>
 </head>
 <body>
@@ -63,9 +185,10 @@
     <header>
       <img class="avatar" src="https://avatars.githubusercontent.com/Petresonko1" alt="avatar">
       <div style="flex:1">
-        <h1>Petre Isongo <small>@Petresonko1 — Software Engineer</small></h1>
-        <p class="lead">I build web and software solutions that span modern websites, mobile applications, and full stack systems with a strong focus on reliability, maintainability, and real world usability. My work blends thoughtful user experience with well structured application logic, ensuring that products are intuitive to use and robust behind the scenes. I enjoy working across the stack, from designing clean interfaces to integrating scalable services and APIs, while paying close attention to performance, observability, and long term sustainability. I value clean code, practical problem solving, and shipping features that create meaningful impact for both users and development teams.</p>
-
+        <h1>Petre Isongo<small>@Petresonko1 — Software Engineer</small></h1>
+        <p class="lead">
+          I build web and software solutions that span modern websites, mobile applications, and full stack systems with a strong focus on reliability, maintainability, and real world usability. My work blends thoughtful user experience with well structured application logic, ensuring that products are intuitive to use and robust behind the scenes. I enjoy working across the stack, from designing clean interfaces to integrating scalable services and APIs, while paying close attention to performance, observability, and long term sustainability. I value clean code, practical problem solving, and shipping features that create meaningful impact for both users and development teams.
+        </p>
         <div class="cta-row">
           <a class="btn" href="https://github.com/Petresonko1" target="_blank" rel="noopener">View my GitHub</a>
           <a class="btn-ghost" href="mailto:peterisongo18@gmail.com">Email me</a>
@@ -74,7 +197,7 @@
       </div>
     </header>
 
-    <main class="grid" style="align-items:start">
+    <main class="grid">
       <section>
         <div class="card">
           <h2 style="margin:0 0 8px 0">Featured Projects</h2>
@@ -121,7 +244,6 @@
       <aside>
         <div class="card">
           <h3 style="margin:0 0 12px 0">Contact & quick links</h3>
-
           <div class="meta-row" style="margin-bottom:10px">
             <div style="flex:1">
               <div class="muted">Email</div>
@@ -157,13 +279,13 @@
         </div>
       </aside>
     </main>
+
     <footer>
       <div style="margin-top:18px">Made with care • © <span id="year"></span> Petre Isongo • <a href="https://github.com/Petresonko1" style="color:var(--muted)">github.com/Petresonko1</a></div>
     </footer>
   </div>
 
   <script>
-    // small scripts: copy email + current year
     document.getElementById('year').textContent = new Date().getFullYear();
     const copyBtn = document.getElementById('copyBtn');
     const emailEl = document.getElementById('email');
