--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       --maxw:1100px;
       font-synthesis:none;
     }
+
     * { box-sizing: border-box; }
     html, body { height: 100%; margin: 0; }
     body {
@@ -27,46 +28,50 @@
       -webkit-font-smoothing:antialiased;
       -moz-osx-font-smoothing:grayscale;
       line-height:1.5;
-      display: flex;
-      justify-content: center;
-      align-items: center;
       min-height: 100vh;
+      padding: 0 16px;
     }
+
     .wrap {
       max-width: var(--maxw);
       width: 100%;
-      margin: 0 auto;
-      padding: 28px;
+      margin: 40px auto;
       border-radius: 14px;
       background: linear-gradient(180deg, rgba(255,255,255,0.018), rgba(255,255,255,0.01));
       box-shadow: 0 10px 30px rgba(2,6,23,0.6);
-      text-align: center;
+      padding: 28px;
     }
+
     header {
       display: flex;
       gap: 28px;
-      align-items: center;
-      justify-content: center;
+      align-items: flex-start;
       flex-direction: row;
       text-align: left;
-      padding-top: 24px;
+      margin-bottom: 24px;
     }
+
     .avatar {
-      width: 100px;
-      height: 100px;
+      width: 120px;
+      height: 120px;
       border-radius: 16px;
       object-fit: cover;
       object-position: center;
       border: 2px solid rgba(255,255,255,0.04);
       background: linear-gradient(135deg, var(--accent), var(--accent-2));
       padding: 3px;
+      flex-shrink: 0;
     }
+
     h1 {
       margin: 0 0 12px 0;
       font-size: 42px;
       letter-spacing: -0.5px;
       line-height: 1.2;
+      color: #e6eef8;
+      display: block;
     }
+
     h1 small {
       display: block;
       color: var(--muted);
@@ -74,18 +79,20 @@
       font-size: 16px;
       margin-top: 4px;
     }
+
     .lead {
       color: var(--muted);
       margin-top: 8px;
       max-width: 66ch;
     }
+
     .cta-row {
       margin-top: 14px;
       display: flex;
       gap: 10px;
       flex-wrap: wrap;
-      justify-content: flex-start;
     }
+
     .btn {
       background: linear-gradient(90deg,var(--accent),var(--accent-2));
       color:#042433;
@@ -96,6 +103,7 @@
       font-size:14px;
       box-shadow:0 6px 18px rgba(35,80,140,0.08);
     }
+
     .btn-ghost {
       background: transparent;
       border: 1px solid rgba(255,255,255,0.06);
@@ -105,43 +113,46 @@
       text-decoration: none;
       font-weight: 600;
     }
+
     main.grid {
       display: grid;
-      grid-template-columns: 1fr 360px;
+      grid-template-columns: 2fr 1fr;
       gap: 22px;
-      margin-top: 20px;
-      justify-items: center;
+      justify-items: start;
       align-items: start;
     }
+
     .card {
       background: var(--card);
       padding: 18px;
       border-radius: 12px;
       border: 1px solid rgba(255,255,255,0.02);
-      text-align: center;
+      text-align: left;
     }
+
     .projects {
       display: grid;
       grid-template-columns: repeat(2,1fr);
       gap: 12px;
-      justify-items: center;
     }
+
     .proj {
       background: linear-gradient(180deg,rgba(0,0,0,0.02),transparent);
       border-radius:10px;
       padding:12px;
       border:1px solid rgba(255,255,255,0.02);
-      text-align:center;
     }
+
     .proj h3 { margin:0; font-size:15px; }
     .proj p { margin:8px 0 0 0; color: var(--muted); font-size:13px; }
+
     .skills {
       display: flex;
       flex-wrap: wrap;
       gap: 8px;
       margin-top: 10px;
-      justify-content: center;
     }
+
     .skill {
       padding: 6px 10px;
       border-radius: 999px;
@@ -149,13 +160,14 @@
       font-size: 13px;
       color: var(--muted);
     }
+
     aside .meta-row {
       display: flex;
       gap: 10px;
-      align-items: center;
       flex-wrap: wrap;
-      justify-content: center;
+      align-items: center;
     }
+
     .stat {
       background: var(--glass);
       padding: 10px;
@@ -163,16 +175,19 @@
       min-width: 100px;
       text-align: center;
     }
+
     .muted { color: var(--muted); font-size:13px; }
-    footer { margin-top:20px; color: var(--muted); font-size:13px; text-align:center; }
+
+    footer { margin-top:20px; color: var(--muted); font-size:13px; text-align:left; }
 
     @media(max-width:920px){
       main.grid { grid-template-columns:1fr; padding-top:10px; }
       .projects { grid-template-columns:1fr; }
       .avatar { width: 100px; height: 100px; }
-      header { flex-direction: column; align-items: center; text-align: center; padding-top: 20px; }
+      header { flex-direction: column; align-items: center; text-align: center; }
       .lead { text-align: center; margin-left: auto; margin-right: auto; }
       .cta-row { justify-content: center; }
+      footer { text-align: center; }
     }
 
     a:hover { opacity:0.95; }
@@ -185,7 +200,9 @@
     <header>
       <img class="avatar" src="https://avatars.githubusercontent.com/Petresonko1" alt="avatar">
       <div style="flex:1">
-        <h1>Petre Isongo<small>@Petresonko1 — Software Engineer</small></h1>
+        <h1>Petre Isongo
+          <small>@Petresonko1 — Software Engineer</small>
+        </h1>
         <p class="lead">
           I build web and software solutions that span modern websites, mobile applications, and full stack systems with a strong focus on reliability, maintainability, and real world usability. My work blends thoughtful user experience with well structured application logic, ensuring that products are intuitive to use and robust behind the scenes. I enjoy working across the stack, from designing clean interfaces to integrating scalable services and APIs, while paying close attention to performance, observability, and long term sustainability. I value clean code, practical problem solving, and shipping features that create meaningful impact for both users and development teams.
         </p>
@@ -200,7 +217,7 @@
     <main class="grid">
       <section>
         <div class="card">
-          <h2 style="margin:0 0 8px 0">Featured Projects</h2>
+          <h2>Featured Projects</h2>
           <div class="projects">
             <div class="proj">
               <h3>Mobile Apps</h3>
@@ -222,11 +239,11 @@
         </div>
 
         <div class="card" style="margin-top:14px">
-          <h2 style="margin:0 0 8px 0">About my approach</h2>
+          <h2>About my approach</h2>
           <p class="muted">Product-driven: I translate product needs into measurable technical plans. I prioritize observability, strong test coverage, and incremental delivery so teams can move quickly and safely.</p>
 
           <div style="margin-top:12px">
-            <h3 style="margin:0 0 8px 0">Tech & Tools</h3>
+            <h3>Tech & Tools</h3>
             <div class="skills">
               <span class="skill">TypeScript</span>
               <span class="skill">Node.js</span>
@@ -243,11 +260,11 @@
 
       <aside>
         <div class="card">
-          <h3 style="margin:0 0 12px 0">Contact & quick links</h3>
+          <h3>Contact & quick links</h3>
           <div class="meta-row" style="margin-bottom:10px">
             <div style="flex:1">
               <div class="muted">Email</div>
-              <div style="display:flex;gap:8px;align-items:center;margin-top:6px; justify-content: center;">
+              <div style="display:flex;gap:8px;align-items:center;margin-top:6px;">
                 <div class="copy" id="email">peterisongo18@gmail.com</div>
                 <button class="btn-ghost" id="copyBtn">Copy</button>
               </div>
@@ -256,7 +273,7 @@
 
           <div style="margin-top:10px">
             <div class="muted">Profiles</div>
-            <div style="margin-top:8px;display:flex;flex-direction:column;gap:8px; align-items: center;">
+            <div style="margin-top:8px;display:flex;flex-direction:column;gap:8px;">
               <a class="badge-ghost" href="https://github.com/Petresonko1" target="_blank" rel="noopener">GitHub</a>
               <a class="badge-ghost" href="https://www.linkedin.com/in/peterisongo" target="_blank" rel="noopener">LinkedIn</a>
               <a class="badge-ghost" href="https://peterisongo16.wixsite.com/peterisongoportfolio" target="_blank" rel="noopener">Portfolio</a>
@@ -265,13 +282,13 @@
 
           <div style="margin-top:12px">
             <div class="muted">Availability</div>
-            <div style="margin-top:8px;color:var(--accent);font-weight:700; text-align: center;">Open to collaborations & contract work</div>
+            <div style="margin-top:8px;color:var(--accent);font-weight:700;">Open to collaborations & contract work</div>
           </div>
         </div>
 
-        <div class="card" style="margin-top:14px;text-align:center">
+        <div class="card" style="margin-top:14px;">
           <div style="font-size:13px;color:var(--muted)">Quick stats</div>
-          <div style="display:flex;gap:10px;justify-content:center;margin-top:10px">
+          <div style="display:flex;gap:10px;margin-top:10px">
             <div class="stat"><div style="font-weight:700">8+</div><div class="muted">Years exp</div></div>
             <div class="stat"><div style="font-weight:700">10+</div><div class="muted">Projects</div></div>
           </div>
