--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Petre Isongo - Software Engineer</title>
+  <title>Peter Isongo - Software Engineer</title>
   <style>
     :root {
       --bg:#0b1020;
