--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <header>
       <img class="avatar" src="https://avatars.githubusercontent.com/Petresonko1" alt="Petre Isongo">
       <div>
-        <h1>Petre Isongo
+        <h1>Peter Isongo
           <small>@Petresonko1 — Software Engineer</small>
         </h1>
         <p class="intro">
