--- a/index.html
+++ b/index.html
@@ -173,6 +173,14 @@
       color: var(--muted);
       font-size: 13px;
     }
+    /* Custom link colors */
+    .github-link { color: #6ee7b7; }
+    .linkedin-link { color: #0A66C2; }
+    .portfolio-link { color: #facc15; }
+
+    .github-link:hover { color: #34d399; }
+    .linkedin-link:hover { color: #004182; }
+    .portfolio-link:hover { color: #fbbf24; }
 
     footer {
       margin-top: 32px;
