--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Peter Isongo - Software Engineer</title>
+  <title>Petre Isongo - Software Engineer</title>
   <style>
     :root {
       --bg:#0b1020;
@@ -173,6 +173,16 @@
       color: var(--muted);
       font-size: 13px;
     }
+
+    .badge-ghost {
+      font-size: 12px;
+      background: rgba(255,255,255,0.02);
+      padding: 6px 8px;
+      border-radius: 8px;
+      text-decoration: none;
+      text-align: center;
+    }
+
     /* Custom link colors */
     .github-link { color: #6ee7b7; }
     .linkedin-link { color: #0A66C2; }
@@ -203,7 +213,7 @@
     <header>
       <img class="avatar" src="https://avatars.githubusercontent.com/Petresonko1" alt="Petre Isongo">
       <div>
-        <h1>Peter Isongo
+        <h1>Petre Isongo
           <small>@Petresonko1 — Software Engineer</small>
         </h1>
         <p class="intro">
@@ -266,9 +276,9 @@
           <div class="meta-row">
             <div class="muted">Profiles:</div>
             <div style="display:flex;flex-direction:column;gap:6px;">
-              <a class="badge-ghost" href="https://github.com/Petresonko1" target="_blank">GitHub</a>
-              <a class="badge-ghost" href="https://www.linkedin.com/in/peterisongo" target="_blank">LinkedIn</a>
-              <a class="badge-ghost" href="https://peterisongo16.wixsite.com/peterisongoportfolio" target="_blank">Portfolio</a>
+              <a class="badge-ghost github-link" href="https://github.com/Petresonko1" target="_blank">GitHub</a>
+              <a class="badge-ghost linkedin-link" href="https://www.linkedin.com/in/peterisongo" target="_blank">LinkedIn</a>
+              <a class="badge-ghost portfolio-link" href="https://peterisongo16.wixsite.com/peterisongoportfolio" target="_blank">Portfolio</a>
             </div>
           </div>
           <div class="meta-row" style="margin-top:12px;">
